third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/transmute-mut-size-increase.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/transmute-mut-size-increase.rs:17:37
   |
17 | const INCREASE_SIZE: &mut [u8; 2] = transmute_mut!(&mut 0u8);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `[u8; 2]` (16 bits)
   = note: this error originates in the macro `$crate::assert_size_eq` which comes from the expansion of the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
